--- a/bff/overlays/local-dev/kustomization.yaml
+++ b/bff/overlays/local-dev/kustomization.yaml
@@ -2,5 +2,5 @@ bases:
   - ../../base
 patchesStrategicMerge:
   - payment-bff-deploy.yaml
-resources:
-  - payment-localstack.yaml
+#resources:
+#  - payment-localstack.yaml
