--- a/bff/base/payment-bff-deploy.yaml
+++ b/bff/base/payment-bff-deploy.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nautible-app-payment-bff
-  namespace: nautible-app
+  name: nautible-app-ms-payment-bff
+  namespace: nautible-app-ms
   labels:
-    app.kubernetes.io/name: nautible-app-payment-bff
-    app.kubernetes.io/instance: nautible-app-payment-bff
+    app.kubernetes.io/name: nautible-app-ms-payment-bff
+    app.kubernetes.io/instance: nautible-app-ms-payment-bff
     app.kubernetes.io/version: 1.0.0
     app.kubernetes.io/component: app
     app.kubernetes.io/part-of: nautible
@@ -14,26 +14,26 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/instance: nautible-app-payment-bff
+      app.kubernetes.io/instance: nautible-app-ms-payment-bff
       app.kubernetes.io/component: app
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: nautible-app-payment-bff
-        app.kubernetes.io/instance: nautible-app-payment-bff
+        app.kubernetes.io/name: nautible-app-ms-payment-bff
+        app.kubernetes.io/instance: nautible-app-ms-payment-bff
         app.kubernetes.io/version: 1.0.0
         app.kubernetes.io/component: app
         app.kubernetes.io/part-of: nautible
         app.kubernetes.io/managed-by: manual
       annotations:
         dapr.io/enabled: "true"
-        dapr.io/app-id: "nautible-app-payment"
+        dapr.io/app-id: "nautible-app-ms-payment"
         dapr.io/app-port: "8080"
         proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }' # https://github.com/dapr/dapr/issues/2657
     spec:
       containers:
-        - name: nautible-app-payment-bff
-          image: public.ecr.aws/nautible/nautible-app-payment-bff:c598119ec55ddc5ba95f1a0dbed7881fde473bf3
+        - name: nautible-app-ms-payment-bff
+          image: public.ecr.aws/nautible/nautible-app-ms-payment-bff:c598119ec55ddc5ba95f1a0dbed7881fde473bf3
           ports:
             - containerPort: 8080
             - containerPort: 9000
