--- a/bff/base/payment-bff-service.yaml
+++ b/bff/base/payment-bff-service.yaml
@@ -1,18 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nautible-app-payment-bff
-  namespace: nautible-app
+  name: nautible-app-ms-payment-bff
+  namespace: nautible-app-ms
   labels:
-    app.kubernetes.io/name: nautible-app-payment-bff
-    app.kubernetes.io/instance: nautible-app-payment-bff
+    app.kubernetes.io/name: nautible-app-ms-payment-bff
+    app.kubernetes.io/instance: nautible-app-ms-payment-bff
     app.kubernetes.io/version: 1.0.0
     app.kubernetes.io/component: app
     app.kubernetes.io/part-of: nautible
     app.kubernetes.io/managed-by: manual
 spec:
   selector:
-    app.kubernetes.io/instance: nautible-app-payment-bff
+    app.kubernetes.io/instance: nautible-app-ms-payment-bff
     app.kubernetes.io/component: app
   ports:
     - name: rest
