--- a/bff/overlays/dev/payment-bff-deploy.yaml
+++ b/bff/overlays/dev/payment-bff-deploy.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nautible-app-payment-bff
-  namespace: nautible-app
+  name: nautible-app-ms-payment-bff
+  namespace: nautible-app-ms
 spec:
   template:
     spec:
       containers:
-        - name: nautible-app-payment-bff
+        - name: nautible-app-ms-payment-bff
           env:
             - name: QUARKUS_DYNAMODB_AWS_REGION
               value: ap-northeast-1
