--- a/bff/overlays/local-dev/payment-localstack.yaml
+++ b/bff/overlays/local-dev/payment-localstack.yaml
@@ -2,11 +2,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: payment-localstack
-  namespace: nautible-app
+  name: payment-bff-localstack
+  namespace: nautible-app-ms
   labels:
-    app.kubernetes.io/name: payment-localstack
-    app.kubernetes.io/instance: payment-localstack
+    app.kubernetes.io/name: payment-bff-localstack
+    app.kubernetes.io/instance: payment-bff-localstack
     app.kubernetes.io/version: 1.0.0
     app.kubernetes.io/component: localstack
     app.kubernetes.io/part-of: nautible
@@ -15,26 +15,26 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/instance: payment-localstack
+      app.kubernetes.io/instance: payment-bff-localstack
       app.kubernetes.io/component: localstack
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: payment-localstack
-        app.kubernetes.io/instance: payment-localstack
+        app.kubernetes.io/name: payment-bff-localstack
+        app.kubernetes.io/instance: payment-bff-localstack
         app.kubernetes.io/version: 1.0.0
         app.kubernetes.io/component: localstack
         app.kubernetes.io/part-of: nautible
         app.kubernetes.io/managed-by: manual
     spec:
       containers:
-        - name: payment-localstack
+        - name: payment-bff-localstack
           image: localstack/localstack
           ports:
             - containerPort: 4566
           env:
             - name: SERVICES
-              value: dynamodb
+              value: dynamodb,sqs,sns
             - name: START_WEB
               value: "0"
           lifecycle:
@@ -51,7 +51,6 @@ spec:
                     && echo \"[localstack]\" >> ~/.aws/credentials \
                     && echo \"aws_access_key_id = test-key\" >> ~/.aws/credentials \
                     && echo \"aws_secret_access_key = test-secret\" >> ~/.aws/credentials \
-                    && for i in `seq 1 60`; do wget -Y off --no-check-certificate -O - -q http://localhost:4566/health >/dev/null && break || true; sleep 5; done \
                     && aws dynamodb create-table --table-name Payment --attribute-definitions AttributeName=PaymentNo,AttributeType=S --key-schema AttributeName=PaymentNo,KeyType=HASH --provisioned-throughput ReadCapacityUnits=1,WriteCapacityUnits=1 --profile localstack --endpoint-url=http://localhost:4566 \
                     && aws dynamodb create-table --table-name Sequence --attribute-definitions AttributeName=Name,AttributeType=S --key-schema AttributeName=Name,KeyType=HASH --provisioned-throughput ReadCapacityUnits=1,WriteCapacityUnits=1 --profile localstack --endpoint-url=http://localhost:4566 \
                     && aws dynamodb put-item --table-name=Sequence --item '{\"Name\": {\"S\": \"Payment\"}, \"SequenceNumber\": {\"N\": \"0\"}}' --profile localstack --endpoint-url=http://localhost:4566"
@@ -59,44 +58,19 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: payment-localstack
-  namespace: nautible-app
+  name: payment-bff-localstack
+  namespace: nautible-app-ms
   labels:
-    app.kubernetes.io/name: payment-localstack
-    app.kubernetes.io/instance: payment-localstack
+    app.kubernetes.io/name: payment-bff-localstack
+    app.kubernetes.io/instance: payment-bff-localstack
     app.kubernetes.io/version: 1.0.0
     app.kubernetes.io/component: localstack
     app.kubernetes.io/part-of: nautible
     app.kubernetes.io/managed-by: manual
 spec:
   selector:
-    app.kubernetes.io/instance: payment-localstack
+    app.kubernetes.io/instance: payment-bff-localstack
     app.kubernetes.io/component: localstack
   ports:
-    - name: payment-localstack
+    - name: payment-bff-localstack
       port: 4566
----
-apiVersion: dapr.io/v1alpha1
-kind: Component
-metadata:
-  name: payment-pubsub
-  namespace: nautible-app
-  labels:
-    app.kubernetes.io/name: payment-pubsub
-    app.kubernetes.io/instance: payment-pubsub
-    app.kubernetes.io/version: 1.0.0
-    app.kubernetes.io/component: pubsub
-    app.kubernetes.io/part-of: nautible
-    app.kubernetes.io/managed-by: manual
-spec:
-  type: pubsub.snssqs
-  version: v1
-  metadata:
-  - name: region
-    value: ap-northeast-1
-  - name: accessKey
-    value: test-key
-  - name: secretKey
-    value: test-secret
-  - name: endpoint
-    value: http://payment-localstack:4566
