--- a/cash/overlays/dev/payment-cash-deploy.yaml
+++ b/cash/overlays/dev/payment-cash-deploy.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nautible-app-payment-cash
-  namespace: nautible-app
+  name: nautible-app-ms-payment-cash
+  namespace: nautible-app-ms
 spec:
   template:
     spec:
       containers:
-        - name: nautible-app-payment-cash
+        - name: nautible-app-ms-payment-cash
           env:
             - name: QUARKUS_DYNAMODB_AWS_REGION
               value: ap-northeast-1
