--- a/cash/overlays/local-dev/payment-cash-deploy.yaml
+++ b/cash/overlays/local-dev/payment-cash-deploy.yaml
@@ -2,15 +2,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nautible-app-payment-cash
-  namespace: nautible-app
+  name: nautible-app-ms-payment-cash
+  namespace: nautible-app-ms
 spec:
   replicas: 1
   template:
     spec:
+      initContainers:
+      - name: wait-payment-cash-localstack
+        image: busybox
+        command: ['sh', '-c', "until nslookup payment-cash-localstack.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for payment-cash-localstack; sleep 2; done"]
       containers:
-      - name: nautible-app-payment-cash
-        image: nautible-app-payment-cash
+      - name: nautible-app-ms-payment-cash
+        image: nautible-app-ms-payment-cash
         env:
         - name: QUARKUS_PROFILE
           value: local-dev
+        # lifecycle:
+        #   postStart:
+        #     exec:
+        #       command:
+        #         - sh
+        #         - -c
+        #         - "for i in `seq 1 60`; do curl http://payment-cash-localstack:4566/health >/dev/null && break || true; sleep 5; done"
