--- a/cash/overlays/local-dev/payment-localstack.yaml
+++ b/cash/overlays/local-dev/payment-localstack.yaml
@@ -2,11 +2,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: payment-localstack
-  namespace: nautible-app
+  name: payment-cash-localstack
+  namespace: nautible-app-ms
   labels:
-    app.kubernetes.io/name: payment-localstack
-    app.kubernetes.io/instance: payment-localstack
+    app.kubernetes.io/name: payment-cash-localstack
+    app.kubernetes.io/instance: payment-cash-localstack
     app.kubernetes.io/version: 1.0.0
     app.kubernetes.io/component: localstack
     app.kubernetes.io/part-of: nautible
@@ -15,20 +15,20 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/instance: payment-localstack
+      app.kubernetes.io/instance: payment-cash-localstack
       app.kubernetes.io/component: localstack
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: payment-localstack
-        app.kubernetes.io/instance: payment-localstack
+        app.kubernetes.io/name: payment-cash-localstack
+        app.kubernetes.io/instance: payment-cash-localstack
         app.kubernetes.io/version: 1.0.0
         app.kubernetes.io/component: localstack
         app.kubernetes.io/part-of: nautible
         app.kubernetes.io/managed-by: manual
     spec:
       containers:
-        - name: payment-localstack
+        - name: payment-cash-localstack
           image: localstack/localstack
           ports:
             - containerPort: 4566
@@ -51,7 +51,6 @@ spec:
                     && echo \"[localstack]\" >> ~/.aws/credentials \
                     && echo \"aws_access_key_id = test-key\" >> ~/.aws/credentials \
                     && echo \"aws_secret_access_key = test-secret\" >> ~/.aws/credentials \
-                    && for i in `seq 1 60`; do wget -Y off --no-check-certificate -O - -q http://localhost:4566/health >/dev/null && break || true; sleep 5; done \
                     && aws dynamodb create-table --table-name Payment --attribute-definitions AttributeName=PaymentNo,AttributeType=S --key-schema AttributeName=PaymentNo,KeyType=HASH --provisioned-throughput ReadCapacityUnits=1,WriteCapacityUnits=1 --profile localstack --endpoint-url=http://localhost:4566 \
                     && aws dynamodb create-table --table-name Sequence --attribute-definitions AttributeName=Name,AttributeType=S --key-schema AttributeName=Name,KeyType=HASH --provisioned-throughput ReadCapacityUnits=1,WriteCapacityUnits=1 --profile localstack --endpoint-url=http://localhost:4566 \
                     && aws dynamodb put-item --table-name=Sequence --item '{\"Name\": {\"S\": \"Payment\"}, \"SequenceNumber\": {\"N\": \"0\"}}' --profile localstack --endpoint-url=http://localhost:4566"
@@ -59,19 +58,19 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: payment-localstack
-  namespace: nautible-app
+  name: payment-cash-localstack
+  namespace: nautible-app-ms
   labels:
-    app.kubernetes.io/name: payment-localstack
-    app.kubernetes.io/instance: payment-localstack
+    app.kubernetes.io/name: payment-cash-localstack
+    app.kubernetes.io/instance: payment-cash-localstack
     app.kubernetes.io/version: 1.0.0
     app.kubernetes.io/component: localstack
     app.kubernetes.io/part-of: nautible
     app.kubernetes.io/managed-by: manual
 spec:
   selector:
-    app.kubernetes.io/instance: payment-localstack
+    app.kubernetes.io/instance: payment-cash-localstack
     app.kubernetes.io/component: localstack
   ports:
-    - name: payment-localstack
+    - name: payment-cash-localstack
       port: 4566
