--- a/convenience/overlays/dev/payment-convenience-deploy.yaml
+++ b/convenience/overlays/dev/payment-convenience-deploy.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nautible-app-payment-convenience
-  namespace: nautible-app
+  name: nautible-app-ms-payment-convenience
+  namespace: nautible-app-ms
 spec:
   template:
     spec:
       containers:
-        - name: nautible-app-payment-convenience
+        - name: nautible-app-ms-payment-convenience
           env:
             - name: QUARKUS_DYNAMODB_AWS_REGION
               value: ap-northeast-1
