--- a/credit/base/payment-credit-deploy.yaml
+++ b/credit/base/payment-credit-deploy.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nautible-app-payment-credit
-  namespace: nautible-app
+  name: nautible-app-ms-payment-credit
+  namespace: nautible-app-ms
   labels:
-    app.kubernetes.io/name: nautible-app-payment-credit
-    app.kubernetes.io/instance: nautible-app-payment-credit
+    app.kubernetes.io/name: nautible-app-ms-payment-credit
+    app.kubernetes.io/instance: nautible-app-ms-payment-credit
     app.kubernetes.io/version: 1.0.0
     app.kubernetes.io/component: app
     app.kubernetes.io/part-of: nautible
@@ -14,26 +14,26 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/instance: nautible-app-payment-credit
+      app.kubernetes.io/instance: nautible-app-ms-payment-credit
       app.kubernetes.io/component: app
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: nautible-app-payment-credit
-        app.kubernetes.io/instance: nautible-app-payment-credit
+        app.kubernetes.io/name: nautible-app-ms-payment-credit
+        app.kubernetes.io/instance: nautible-app-ms-payment-credit
         app.kubernetes.io/version: 1.0.0
         app.kubernetes.io/component: app
         app.kubernetes.io/part-of: nautible
         app.kubernetes.io/managed-by: manual
       annotations:
         dapr.io/enabled: "true"
-        dapr.io/app-id: "nautible-app-payment-credit"
+        dapr.io/app-id: "nautible-app-ms-payment-credit"
         dapr.io/app-port: "8080"
         proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }' # https://github.com/dapr/dapr/issues/2657
     spec:
       containers:
-        - name: nautible-app-payment-credit
-          image: public.ecr.aws/nautible/nautible-app-payment-credit:b83529cb8b489ec9ed03242497f8faf6e9be995d
+        - name: nautible-app-ms-payment-credit
+          image: public.ecr.aws/nautible/nautible-app-ms-payment-credit:b83529cb8b489ec9ed03242497f8faf6e9be995d
           ports:
             - containerPort: 8080
             - containerPort: 9000
