--- a/credit/overlays/local-dev/payment-credit-deploy.yaml
+++ b/credit/overlays/local-dev/payment-credit-deploy.yaml
@@ -13,17 +13,18 @@ spec:
         image: busybox
         command: ['sh', '-c', "until nslookup payment-credit-localstack.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for payment-credit-localstack; sleep 2; done"]
       containers:
-        - name: nautible-app-ms-payment-credit
-          env:
-          - name: QUARKUS_PROFILE
-            value: local-dev
-          #- name: JAVA_VERSION
-          #  value: "11"
-          # daprのsidecarの初期化時に必要なlocalstack(sns,sqs)が利用できるまでwait
-          # lifecycle:
-          #   postStart:
-          #     exec:
-          #       command:
-          #         - sh
-          #         - -c
-          #         - "for i in `seq 1 60`; do curl http://payment-credit-localstack:4566/health >/dev/null && break || true; sleep 5; done"
+      - name: nautible-app-ms-payment-credit
+        image: nautible-app-ms-payment-credit
+        env:
+        - name: QUARKUS_PROFILE
+          value: local-dev
+        #- name: JAVA_VERSION
+        #  value: "11"
+        # daprのsidecarの初期化時に必要なlocalstack(sns,sqs)が利用できるまでwait
+        # lifecycle:
+        #   postStart:
+        #     exec:
+        #       command:
+        #         - sh
+        #         - -c
+        #         - "for i in `seq 1 60`; do curl http://payment-credit-localstack:4566/health >/dev/null && break || true; sleep 5; done"
