--- a/bff/overlays/local-dev/payment-bff-deploy.yaml
+++ b/bff/overlays/local-dev/payment-bff-deploy.yaml
@@ -13,18 +13,14 @@ spec:
         image: busybox
         command: ['sh', '-c', "until nslookup payment-bff-localstack.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for payment-bff-localstack; sleep 2; done"]
       containers:
-        - name: nautible-app-ms-payment-bff
-          image: nautible-app-ms-payment-bff
-          env:
-          - name: QUARKUS_PROFILE
-            value: local-dev
-          #- name: JAVA_VERSION
-          #  value: "11"
-          # daprのsidecarの初期化時に必要なlocalstack(sns,sqs)が利用できるまでwait
-          # lifecycle:
-          #   postStart:
-          #     exec:
-          #       command:
-          #         - sh
-          #         - -c
-          #         - "for i in `seq 1 60`; do curl http://payment-bff-localstack:4566/health >/dev/null && break || true; sleep 5; done"
+      - name: nautible-app-ms-payment-bff
+        image: nautible-app-ms-payment-bff
+        env:
+        - name: DYNAMODB_REGION
+          value: ap-northeast-1
+        - name: DYNAMODB_ENDPOINT
+          value: http://payment-bff-localstack.nautible-app-ms.svc.cluster.local:4566
+        - name: AWS_ACCESS_KEY
+          value: test-key
+        - name: AWS_SECRET_KEY
+          value: test-secret
