--- a/cash/overlays/local-dev/kustomization.yaml
+++ b/cash/overlays/local-dev/kustomization.yaml
@@ -2,5 +2,5 @@ bases:
   - ../../base
 patchesStrategicMerge:
   - payment-cash-deploy.yaml
-resources:
-  - payment-localstack.yaml
+#resources:
+#  - payment-localstack.yaml
