--- a/cash/overlays/local-dev/payment-cash-deploy.yaml
+++ b/cash/overlays/local-dev/payment-cash-deploy.yaml
@@ -8,20 +8,19 @@ spec:
   replicas: 1
   template:
     spec:
-      initContainers:
-      - name: wait-payment-cash-localstack
-        image: busybox
-        command: ['sh', '-c', "until nslookup payment-cash-localstack.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for payment-cash-localstack; sleep 2; done"]
+      # initContainers:
+      # - name: wait-payment-cash-localstack
+      #   image: busybox
+      #   command: ['sh', '-c', "until nslookup payment-cash-localstack.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for payment-cash-localstack; sleep 2; done"]
       containers:
       - name: nautible-app-ms-payment-cash
         image: nautible-app-ms-payment-cash
         env:
-        - name: QUARKUS_PROFILE
-          value: local-dev
-        # lifecycle:
-        #   postStart:
-        #     exec:
-        #       command:
-        #         - sh
-        #         - -c
-        #         - "for i in `seq 1 60`; do curl http://payment-cash-localstack:4566/health >/dev/null && break || true; sleep 5; done"
+        - name: DYNAMODB_REGION
+          value: ap-northeast-1
+        - name: DYNAMODB_ENDPOINT
+          value: http://payment-bff-localstack.nautible-app-ms.svc.cluster.local:4566
+        - name: AWS_ACCESS_KEY
+          value: test-key
+        - name: AWS_SECRET_KEY
+          value: test-secret
