--- a/bff/base/payment-bff-deploy.yaml
+++ b/bff/base/payment-bff-deploy.yaml
@@ -27,7 +27,7 @@ spec:
         app.kubernetes.io/managed-by: manual
       annotations:
         dapr.io/enabled: "true"
-        dapr.io/app-id: "nautible-app-ms-payment"
+        dapr.io/app-id: "nautible-app-ms-payment-bff"
         dapr.io/app-port: "8080"
         proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }' # https://github.com/dapr/dapr/issues/2657
     spec:
