--- a/payment/overlays/local-dev/payment-deploy.yaml
+++ b/payment/overlays/local-dev/payment-deploy.yaml
@@ -2,19 +2,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nautible-app-ms-payment-credit
+  name: nautible-app-ms-payment
   namespace: nautible-app-ms
 spec:
   replicas: 1
   template:
     spec:
-      # initContainers:
-      # - name: wait-payment-credit-localstack
-      #   image: busybox
-      #   command: ['sh', '-c', "until nslookup payment-credit-localstack.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for payment-credit-localstack; sleep 2; done"]
+      initContainers:
+      - name: wait-payment-localstack
+        image: busybox
+        command: ['sh', '-c', "until nslookup payment-localstack.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for payment-localstack; sleep 2; done"]
       containers:
-      - name: nautible-app-ms-payment-credit
-        image: nautible-app-ms-payment-credit
+      - name: nautible-app-ms-payment
+        image: nautible-app-ms-payment
         env:
         - name: DYNAMODB_REGION
           value: ap-northeast-1
