--- a/payment/overlays/local-dev/kustomization.yaml
+++ b/payment/overlays/local-dev/kustomization.yaml
@@ -1,7 +1,7 @@
 bases:
   - ../../base
 patchesStrategicMerge:
-  - payment-bff-deploy.yaml
+  - payment-deploy.yaml
 resources:
   - payment-localstack.yaml
   - payment-pubsub.yaml
