--- a/payment/overlays/local-dev/payment-localstack.yaml
+++ b/payment/overlays/local-dev/payment-localstack.yaml
@@ -2,11 +2,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: payment-bff-localstack
+  name: payment-localstack
   namespace: nautible-app-ms
   labels:
-    app.kubernetes.io/name: payment-bff-localstack
-    app.kubernetes.io/instance: payment-bff-localstack
+    app.kubernetes.io/name: payment-localstack
+    app.kubernetes.io/instance: payment-localstack
     app.kubernetes.io/version: 1.0.0
     app.kubernetes.io/component: localstack
     app.kubernetes.io/part-of: nautible
@@ -15,20 +15,20 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/instance: payment-bff-localstack
+      app.kubernetes.io/instance: payment-localstack
       app.kubernetes.io/component: localstack
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: payment-bff-localstack
-        app.kubernetes.io/instance: payment-bff-localstack
+        app.kubernetes.io/name: payment-localstack
+        app.kubernetes.io/instance: payment-localstack
         app.kubernetes.io/version: 1.0.0
         app.kubernetes.io/component: localstack
         app.kubernetes.io/part-of: nautible
         app.kubernetes.io/managed-by: manual
     spec:
       containers:
-        - name: payment-bff-localstack
+        - name: payment-localstack
           image: localstack/localstack:0.14.1
           ports:
             - containerPort: 4566
@@ -59,19 +59,19 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: payment-bff-localstack
+  name: payment-localstack
   namespace: nautible-app-ms
   labels:
-    app.kubernetes.io/name: payment-bff-localstack
-    app.kubernetes.io/instance: payment-bff-localstack
+    app.kubernetes.io/name: payment-localstack
+    app.kubernetes.io/instance: payment-localstack
     app.kubernetes.io/version: 1.0.0
     app.kubernetes.io/component: localstack
     app.kubernetes.io/part-of: nautible
     app.kubernetes.io/managed-by: manual
 spec:
   selector:
-    app.kubernetes.io/instance: payment-bff-localstack
+    app.kubernetes.io/instance: payment-localstack
     app.kubernetes.io/component: localstack
   ports:
-    - name: payment-bff-localstack
+    - name: payment-localstack
       port: 4566
