--- a/payment/overlays/local-dev/payment-localstack.yaml
+++ b/payment/overlays/local-dev/payment-localstack.yaml
@@ -52,9 +52,12 @@ spec:
                     && echo \"aws_access_key_id = test-key\" >> ~/.aws/credentials \
                     && echo \"aws_secret_access_key = test-secret\" >> ~/.aws/credentials \
                     && aws dynamodb create-table --table-name Payment --attribute-definitions AttributeName=OrderNo,AttributeType=S AttributeName=OrderDate,AttributeType=S AttributeName=CustomerId,AttributeType=N --key-schema AttributeName=OrderNo,KeyType=HASH --provisioned-throughput ReadCapacityUnits=1,WriteCapacityUnits=1 --global-secondary-indexes '[{\"IndexName\":\"GSI-CustomerId\", \"KeySchema\":[{\"AttributeName\":\"CustomerId\",\"KeyType\":\"HASH\"},{\"AttributeName\":\"OrderDate\",\"KeyType\":\"RANGE\"}],\"Projection\":{\"ProjectionType\":\"ALL\"},\"ProvisionedThroughput\":{\"ReadCapacityUnits\":1,\"WriteCapacityUnits\":1}}]' --profile localstack --endpoint-url=http://localhost:4566 \
+                    && aws dynamodb create-table --table-name CreditPayment --attribute-definitions AttributeName=AcceptNo,AttributeType=S --key-schema AttributeName=AcceptNo,KeyType=HASH --provisioned-throughput ReadCapacityUnits=1,WriteCapacityUnits=1 --profile localstack --endpoint-url=http://localhost:4566 \
                     && aws dynamodb create-table --table-name PaymentAllocateHistory --attribute-definitions AttributeName=RequestId,AttributeType=S --key-schema AttributeName=RequestId,KeyType=HASH --provisioned-throughput ReadCapacityUnits=1,WriteCapacityUnits=1 --profile localstack --endpoint-url=http://localhost:4566 \
                     && aws dynamodb create-table --table-name Sequence --attribute-definitions AttributeName=Name,AttributeType=S --key-schema AttributeName=Name,KeyType=HASH --provisioned-throughput ReadCapacityUnits=1,WriteCapacityUnits=1 --profile localstack --endpoint-url=http://localhost:4566 \
-                    && aws dynamodb put-item --table-name=Sequence --item '{\"Name\": {\"S\": \"Payment\"}, \"SequenceNumber\": {\"N\": \"0\"}}' --profile localstack --endpoint-url=http://localhost:4566"
+                    && aws dynamodb put-item --table-name=Sequence --item '{\"Name\": {\"S\": \"Payment\"}, \"SequenceNumber\": {\"N\": \"0\"}}' --profile localstack --endpoint-url=http://localhost:4566 \
+                    && aws dynamodb put-item --table-name=Sequence --item '{\"Name\": {\"S\": \"CreditPayment\"}, \"SequenceNumber\": {\"N\": \"0\"}}' --profile localstack --endpoint-url=http://localhost:4566"
+
 ---
 apiVersion: v1
 kind: Service
