--- a/payment/base/payment-service.yaml
+++ b/payment/base/payment-service.yaml
@@ -15,7 +15,7 @@ spec:
     app.kubernetes.io/instance: nautible-app-ms-payment
     app.kubernetes.io/component: app
   ports:
-    - name: rest
+    - name: http
       port: 8080
       targetPort: 8080
     - name: grpc
