Azure対応 nautible/issues#53

--- a/credit/overlays/aws/dev/kustomization.yaml
+++ b/credit/overlays/aws/dev/kustomization.yaml
@@ -1,6 +1,4 @@
 bases:
-  - ../../base
+  - ../../../base
 patchesStrategicMerge:
   - payment-credit-deploy.yaml
-#resources:
-#  - payment-localstack.yaml
