--- a/credit/overlays/azure/dev/payment-credit-deploy.yaml
+++ b/credit/overlays/azure/dev/payment-credit-deploy.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
       - name: nautible-app-ms-payment-credit
-      - image: nautibledevacr.azurecr.io/nautible-app-ms-credit:fb0fa3dd8360dd017ab79ccc6115479db70990a0
+      - image: nautibledevacr.azurecr.io/nautible-app-ms-credit:latest
         env:
         - name: DB_CONNECTION_STRING
           value: mongodb://${DB_USER}:${DB_PW}@${DB_USER}.mongo.cosmos.azure.com:10255/?ssl=true&replicaSet=globaldb&retrywrites=false&maxIdleTimeMS=120000&appName=@${DB_USER}@
