--- a/payment/overlays/azure/local-dev/payment-deploy.yaml
+++ b/payment/overlays/azure/local-dev/payment-deploy.yaml
@@ -24,4 +24,5 @@ spec:
               command:
                 - sh
                 - -c
-                - "sleep 30"
+                - "for i in `seq 1 10`; do curl -I -m 2 http://payment-redis:6379/ -o /dev/null || if [ $? == 8 ];then break; else true;fi; sleep 5; done"
+                - "for i in `seq 1 60`; do curl http://payment-mongodb:8081/ >/dev/null && break || true; sleep 5; done"
