paymentとcreditのフォルダを統一する。 (nautible-pluginでkustomizeのpatchを現状の構成で維持するため） nautible/issues#53

--- a/overlays/aws/local-dev/kustomization.yaml
+++ b/overlays/aws/local-dev/kustomization.yaml
@@ -2,7 +2,7 @@ bases:
   - ../../../base
 patchesStrategicMerge:
   - payment-deploy.yaml
+  - payment-credit-deploy.yaml
 resources:
-  - payment-mongodb.yaml
-  - payment-redis.yaml
+  - payment-localstack.yaml
   - payment-pubsub.yaml
