--- a/overlays/aws/local-dev/payment-credit-deploy.yaml
+++ b/overlays/aws/local-dev/payment-credit-deploy.yaml
@@ -8,10 +8,10 @@ spec:
   replicas: 1
   template:
     spec:
-      # initContainers:
-      # - name: wait-payment-credit-localstack
-      #   image: busybox
-      #   command: ['sh', '-c', "until nslookup payment-credit-localstack.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for payment-credit-localstack; sleep 2; done"]
+      initContainers:
+      - name: wait-payment
+        image: busybox
+        command: ['sh', '-c', "until nslookup nautible-app-ms-payment.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for payment; sleep 2; done"]
       containers:
       - name: nautible-app-ms-payment-credit
         image: nautible-app-ms-payment-credit
