--- a/overlays/azure/local-dev/kustomization.yaml
+++ b/overlays/azure/local-dev/kustomization.yaml
@@ -2,6 +2,8 @@ bases:
   - ../../../base
 patchesStrategicMerge:
   - payment-deploy.yaml
+  - payment-credit-deploy.yaml
 resources:
-  - payment-localstack.yaml
+  - payment-mongodb.yaml
+  - payment-redis.yaml
   - payment-pubsub.yaml
