--- a/overlays/aws/dev/kustomization.yaml
+++ b/overlays/aws/dev/kustomization.yaml
@@ -1,4 +1,7 @@
 bases:
   - ../../../base
 patchesStrategicMerge:
+  - payment-deploy.yaml
   - payment-credit-deploy.yaml
+resources:
+  - ./payment-dapr-pubsub.yaml
