ログ周りの設定値変更

--- a/overlays/aws/dev/payment-deploy.yaml
+++ b/overlays/aws/dev/payment-deploy.yaml
@@ -9,5 +9,9 @@ spec:
       containers:
       - name: nautible-app-ms-payment
         env:
+        - name: LOG_LEVEL # DEBUG, INFO, WARN, ERROR, DPANIC, PANIC, FATAL
+          value: INFO
+        - name: LOG_FORMAT # json, console
+          value: json
         - name: DYNAMODB_REGION
           value: ap-northeast-1
