--- a/overlays/aws/local-dev/payment-deploy.yaml
+++ b/overlays/aws/local-dev/payment-deploy.yaml
@@ -12,8 +12,10 @@ spec:
       - name: nautible-app-ms-payment
         image: nautible-app-ms-payment
         env:
-        - name: LOG_ENV
-          value: Development
+        - name: LOG_LEVEL # DEBUG, INFO, WARN, ERROR, DPANIC, PANIC, FATAL
+          value: DEBUG
+        - name: LOG_FORMAT # json, console
+          value: console
         - name: DYNAMODB_REGION
           value: ap-northeast-1
         - name: DYNAMODB_ENDPOINT
