--- a/overlays/azure/dev/payment-credit-deploy.yaml
+++ b/overlays/azure/dev/payment-credit-deploy.yaml
@@ -10,6 +10,10 @@ spec:
       - name: nautible-app-ms-payment-credit
         image: nautibledevacr.azurecr.io/nautible-app-ms-credit:2972ee0aaef7b69db04be9b025bc73ac978d6aab
         env:
+        - name: LOG_LEVEL # DEBUG, INFO, WARN, ERROR, DPANIC, PANIC, FATAL
+          value: INFO
+        - name: LOG_FORMAT # json, console
+          value: json
         - name: DB_CONNECTION_STRING
           value: mongodb://${DB_USER}:${DB_PW}@${DB_USER}.mongo.cosmos.azure.com:10255/?ssl=true&replicaSet=globaldb&retrywrites=false&maxIdleTimeMS=120000&appName=@${DB_USER}@
         - name: DB_USER
